--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <p>LinkedIn</p>
             </div>
           </a>
-          <a href="https://github.com/SouzaGs047/gustavosouza" target="_blank">
+          <a href="https://github.com/SouzaGs047/Portifolio_Senac.git" target="_blank">
             <div class="principal__botao-github">
               <img src="./assets/github.png" alt="" />
               <p>Github</p>
